fixed text shift

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+@layer base {
+  img {
+    @apply inline-block;
+  }
+}
